# enzyme_correlator

./: .gitignore  .pre-commit-config.yaml  Highlights.docx  Instructions.pages  LICENSE  README.md  Sharma 2020 esters.enlx  Shishir 2020 SI.docx  Shishir 2020 main document.docx  Shishir 2020 title page.docx  Signal to background ratio_radar plot_cocktail scheme.csv  Signal to background ratio_radar plot_cocktail scheme.xls  Table 1.docx  data_old.csv  enzyme_correlations.py  pyproject.toml  scrollbar_test.py  slider.py  test.py  todo.txt
.github/workflows/: ci.yml
src/enzyme_correlator/: __init__.py
tests/: test_enzyme_correlator.py
